--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-types": "npx supabase gen types typescript --project-id imrbbzegneyoqmilbrsv --schema public > types_db.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.4.7",
+    "@supabase/ssr": "^0.5.2",
+    "@tanstack/react-query": "^5.67.2",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "next": "14.2.24",
     "react": "^18",
     "react-dom": "^18"
